Fixed compiler errors.  Other improvements for type safety and immutability.
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@658984 13f79535-47bb-0310-9956-ffa450edef68